@@ -13,4 +13,5 @@
 /t/output/pie.html
 /t/output/hbar.html
 /t/output/line.html
+/t/output/scatter.html
 /t/output/*.json
